# clangd-probe

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: examples.md  production.md
docs/plans/: 2026-04-19-clangd-probe-repo-polish-design.md  2026-04-19-clangd-probe-repo-polish-implementation.md
skills/clangd-probe-operations/: SKILL.md
src/clangd_probe/: __init__.py  cli.py  context.py  daemon_client.py  daemon_server.py  daemon_state.py  discovery.py  lsp_client.py  main.py  output.py  repl.py  resolve.py
src/clangd_probe/adapters/: __init__.py  base.py  generic.py  sparta.py
src/clangd_probe/commands/: __init__.py  check.py  common.py  daemon.py  def.py  env.py  find.py  hover.py  refs.py  symbols.py
tests/: test_adapters.py  test_cli_help_and_json.py  test_cli_smoke.py  test_daemon_commands.py  test_daemon_routing.py  test_daemon_state.py  test_discovery.py  test_document_commands.py  test_env_and_check.py  test_error_contracts.py  test_live_clangd_smoke.py  test_lsp_client.py  test_real_repo_smoke.py  test_reference_and_find_commands.py  test_repl_smoke.py  test_resolution.py
tests/fakes/: fake_clangd_server.py
